--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -5,7 +5,7 @@
 
 }
 <p></p>
-<div class="panel panel-default">
+<div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">Filter Report Cash Load</h3>
     </div>
@@ -82,7 +82,7 @@
 
     </div>
 </div>
-<div class="panel panel-default">
+<div class="panel panel-primary">
     <div class="panel-heading">
 
         <h3 class="panel-title">List Cash Load</h3>       
