todo ok y revisado con jose el reporting group y el load cash

--- a/OctagonPlatform/Views/ReportsSmart/_PartialCashLoadTable.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialCashLoadTable.cshtml
@@ -4,12 +4,12 @@
   <!-- Single button -->
 
     <div class="row">
-        <div class="col-sm-10"></div>
-        <div class="col-sm-2">
+        <div class="col-sm-9"></div>
+        <div class="col-sm-3" style="text-align: right;">
             <div class="btn-group" role="group" aria-label="...">
-                <button type="button" class="btn btn-default" onclick="$('#pdf').click();" style="border-radius: 0px;">PDF</button>
-                <button type="button" class="btn btn-default" onclick="Export('ReportLoadCash.xls', 'TableLoadCash','idhead');" style="border-radius: 0px;">XLS</button>
-                <button type="button" class="btn btn-default" onclick="Export('ReportLoadCash.doc', 'TableLoadCash','idhead');" style="border-radius: 0px;">DOC</button>
+                <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
+                <button type="button" class="btn btn-success" onclick="Export('ReportLoadCash.xls', 'TableLoadCash','idhead');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                <button type="button" class="btn btn-primary" onclick="Export('ReportLoadCash.doc', 'TableLoadCash','idhead');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
             </div>
             <p></p>
