--- a/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
@@ -1,1 +1,163 @@
-﻿<h3>Notes</h3>
+﻿@model OctagonPlatform.Models.Terminal
+
+<h3 data-toggle="collapse" data-target="#getNotes">Notes</h3>
+
+<div id="getNotes" class="panel-collapse collapse">
+    <div>
+        <table>
+            <tbody>
+                @{
+                    foreach (var item in Model.Notes)
+                    {
+                        <tr>
+                            <td>
+                                @item.Id
+                            </td>
+                            <td>
+                                <input type="text" id="NotesValues_@item.Id" name="NotesValues" value="@item.Nota">
+                                @item.Nota
+                            </td>
+                            <td>
+                                @item.CreatedAt
+                            </td>
+                            <td>
+                                <button type="button" class="NotesEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalNotesEdit">Edit</button>
+                            </td>
+                            <td>
+                                <button type="button" class="NotesDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteNoteModal">Delete</button>
+                            </td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+        <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#myModaNotesAdd">Add</button>
+
+        @*//EDITTTTTTTTTTTTTTTTTTTTTTTTTTTtttttttttttttttt*@
+        <div id="myModalNotesEdit" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                    </div>
+
+                    <h3 class="alert-info">Edit</h3>
+
+                    @using (Html.BeginForm("SetNotes", "Terminals"))
+                    {
+                    @Html.AntiForgeryToken()
+
+                    <input type="hidden" id="IndexTerminalId" name="IndexTerminalId" value="@Model.Id">
+                    <input type="hidden" id="noteId" name="noteId" value="">
+
+                    <p class="alert alert-danger">
+                        @ViewBag.Error
+                    </p>
+                    <div class="form-group">
+                        <input type="text" id="notes" name="notes" value="">
+                    </div>
+                    <div class="form-group">
+                        @*@Html.CheckBox("AutoRecord")Auto Record
+                            @Html.ValidationMessage("AutoRecord")*@
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-10 col-lg-offset-2">
+                            <button type="reset" class="btn btn-default">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                    }
+                </div>
+            </div>
+        </div>
+
+        <div id="myModaNotesAdd" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                    </div>
+
+                    <h3 class="alert-info">Edit</h3>
+
+                    @using (Html.BeginForm("SetNotes", "Terminals"))
+                    {
+                        @Model
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" id="indexTerminalId" name="IndexTerminalId" value="@Model.Id">
+
+                        <p class="alert alert-danger">
+                            @ViewBag.Error
+                        </p>
+                        <div class="form-group">
+                            <input type="text" id="notes" name="notes" value="">
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-lg-10 col-lg-offset-2">
+                                <button type="reset" class="btn btn-default">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+
+        <div id="DeleteCassetteModal" class="modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Delete Cassette</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete this cassette? </p>
+                    </div>
+                    <div class="modal-footer">
+                        @using (Html.BeginForm("CassetteDelete", "Terminals", FormMethod.Post))
+                        {
+                            @Html.AntiForgeryToken()
+                            @Html.Hidden("noteId")
+                            <input type="hidden" id="itemId" name="id" value="" />
+                            <div class="form-group">
+                                <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
+                                <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@Scripts.Render("~/Scripts/jquery-1.10.2.js")
+
+<script>
+
+    $(document).on("click", ".NotesEdit", function () {
+        var passedID = $(this).data('id');
+        var passedValue = $("#NotesValues_" + passedID).val();
+        alert(passedValue);
+        $("#myModalNotesEdit #notes").val(passedValue);
+    });
+
+    $(document).on("click", ".NotesEdit", function () {
+        var passedID = $(this).data('id');
+        $("#myModalNotesEdit #noteId").val(passedID);
+    });
+
+    $(document).on("click", ".NotesDelete", function () {
+        var passedID = $(this).data('id');
+        $("#DeleteNoteModal #noteId").val(passedID);
+    });
+</script>
+
+
+
+
+
