--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -70,7 +70,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10" style="text-align: right;">
-                            <input type="submit" value="Create" class="btn btn-primary" />
+                            <input type="submit" value="Filter" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
