--- a/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
@@ -1,5 +1,144 @@
-﻿@{
-    ViewBag.Title = "Cash management";
+﻿@model OctagonPlatform.Models.FormsViewModels.CashManagementVM
+@{
+    ViewBag.Title = "Cash Management";
+
+
+}
+<p></p>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">Filter Report Cash Management</h3>
+    </div>
+    <div class="panel-body">
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="row">
+                <div class="form-horizontal">
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal", @placeholder = "< All >" } })
+                                @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Partner, new { htmlAttributes = new { @class = "form-control", @id = "partner", @placeholder = "< All >" } })
+                                @Html.HiddenFor(model => model.PartnerId, new { id = "partnerid" })
+                                @Html.ValidationMessageFor(model => model.Partner, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Group, new { htmlAttributes = new { @class = "form-control", @id = "group", @placeholder = "< All >" } })
+                                @Html.HiddenFor(model => model.GroupId, new { id = "groupid" })
+                                @Html.ValidationMessageFor(model => model.Group, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EnumDropDownListFor(b => b.Status, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                   
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10" style="text-align: right;">
+                                <input type="submit" value="Filter" class="btn btn-primary" />
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        }
+
+    </div>
+</div>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+
+        <h3 class="panel-title">List Cash Management</h3>
+    </div>
+    <div class="panel-body">
+        @Html.Partial("_PartialCashManagementTable")
+
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+
+    $(function () {
+        $("#tablecash").DataTable();
+
+              
+        $('#terminal').autocomplete({
+            source: '@Url.Action("AutoTerminal")'
+          });
+           $('#partner').autocomplete({
+               source: '@Url.Action("AutoPartner")',
+               select: function (event, ui) {
+
+                   $("#partner").val(ui.item.label); // display the selected text
+                   $("#partnerid").val(ui.item.value); // save selected id to hidden input
+
+                   return false;
+               }
+        });
+           //clear id from hidden field if input is blank
+           $('#partner').blur(function () {
+               if ($('#partner').val() == '') {
+                   $('#partnerid').val('');
+               }
+           });
+        //Auto group
+          $('#group').autocomplete({
+               source: '@Url.Action("AutoGroup")',
+               select: function (event, ui) {
+
+                   $("#group").val(ui.item.label); // display the selected text
+                   $("#groupid").val(ui.item.value); // save selected id to hidden input
+
+                   return false;
+               }
+        });
+           //clear id from hidden field if input is blank
+           $('#group').blur(function () {
+               if ($('#group').val() == '') {
+                   $('#groupid').val('');
+               }
+           });
+        //end
+            ChartBar();
+            ExportPdf();
+
+
+
+        });
+
+    </script>
+
 }
 
-<p>Hacer el reporte Cash management</p>
+
