upload documents funcionnando OK

--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -46,7 +46,7 @@
             <tr>
                 <th>ID</th>
                 <th>Partner</th>
-                <th>Location</th>
+                <th>Location Type</th>
                 <th>Address</th>
                 <th>Phone</th>
                 <!-- <th>Country</th>
