--- a/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
@@ -9,7 +9,12 @@
         </tr>
         <tr class="info">
 
-            <th>Location:</th>
+            <th>Location Name:</th>
+            <th>@Model.LocationName</th>
+        </tr>
+        <tr class="info">
+
+            <th>Location Type:</th>
             <th>@Model.LocationType.Name</th>
         </tr>
         <tr class="info">
