add datecreated en terminal

--- a/OctagonPlatform/Views/ReportGroup/Index.cshtml
+++ b/OctagonPlatform/Views/ReportGroup/Index.cshtml
@@ -160,6 +160,7 @@
 
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/selectmulti")
+    @Scripts.Render("~/Scripts/autocomplete.js")
     @Scripts.Render("~/Scripts/addgroup.js")
 
 }
