report terminal list ready

--- a/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalListViewModel
 @{
-    ViewBag.Title = "CashLoad";
+    ViewBag.Title = "Report Terminal List";
 
 
 }
