--- a/OctagonPlatform/Views/ReportsSmart/_PartialCashManagementTable.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialCashManagementTable.cshtml
@@ -8,8 +8,8 @@
         <div class="col-sm-3" style="text-align: right;">
             <div class="btn-group" role="group" aria-label="...">
                 <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
-                <button type="button" class="btn btn-success" onclick="Export('ReportLoadCash.xls', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
-                <button type="button" class="btn btn-primary" onclick="Export('ReportLoadCash.doc', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
+                <button type="button" class="btn btn-success" onclick="Export('ReportCashManagement.xls', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                <button type="button" class="btn btn-primary" onclick="Export('ReportCashManagement.doc', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
             </div>
             <p></p>
@@ -109,7 +109,7 @@
 @using (Html.BeginForm("Export", "ReportsSmart", FormMethod.Post))
 {
     <input type="hidden" name="html" />
-    <input type="submit" id="pdf" onclick="ExportPdf('ReportLoadCash.pdf', 'TableExport','idhead');" value="" style="display:none" />
+    <input type="submit" id="pdf" onclick="ExportPdf('ReportCashManagement.pdf', 'TableExport','idhead');" value="" style="display:none" />
 
 }
 
