--- a/OctagonPlatform/Views/ReportsSmart/_PartialTerminalTable.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialTerminalTable.cshtml
@@ -8,8 +8,8 @@
         <div class="col-sm-3" style="text-align: right;">
             <div class="btn-group" role="group" aria-label="...">
                 <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
-                <button type="button" class="btn btn-success" onclick="Export('ReportLoadCash.xls', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
-                <button type="button" class="btn btn-primary" onclick="Export('ReportLoadCash.doc', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
+                <button type="button" class="btn btn-success" onclick="Export('ReportTerminalList.xls', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                <button type="button" class="btn btn-primary" onclick="Export('ReportTerminalList.doc', 'TableExport','idhead');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
             </div>
             <p></p>
@@ -52,12 +52,12 @@
             </thead>
             <tbody>
                
-                @foreach (var item in (List<OctagonPlatform.Models.FormsViewModels.TerminalTableViewModel>)TempData["List"])
+                @foreach (var item in (List<OctagonPlatform.Models.Terminal>)TempData["List"])
                 {
                    
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.TerminalID)
+                            @Html.DisplayFor(modelItem => item.TerminalId)
                         </td>
 
                         <td>
@@ -66,40 +66,40 @@
                         </td>
 
                         <td>
-                            @Html.DisplayFor(modelItem => item.Address)
+                           @item.Address1  @item.Address2
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.City)
+                            @Html.DisplayFor(modelItem => item.City)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.State)
+                           @Html.DisplayFor(modelItem => item.State)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.PostalCode)
+                            @Html.DisplayFor(modelItem => item.Zip)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.ContactName)
+                            @Html.DisplayFor(modelItem => item.TerminalContacts.FirstOrDefault().Name)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.ContactPhone)
+                            @Html.DisplayFor(modelItem => item.TerminalContacts.FirstOrDefault().Phone)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.ATMType)
+                           @Html.DisplayFor(modelItem => item.Make.Name)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.Connection)
+                            @Html.DisplayFor(modelItem => item.CommunicationType)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.EMVStatus)
+                            falta este dato
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.DCCStatus)
+                            falta este dato
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.SurchargeAmount)
+                            @Html.DisplayFor(modelItem => item.SurchargeAmountFee)
                         </td>
                         <td>
-                            $@Html.DisplayFor(modelItem => item.CreationDate)
+                            @Html.DisplayFor(modelItem => item.DateCreated)
                         </td>
 
 
@@ -120,7 +120,7 @@
 @using (Html.BeginForm("Export", "ReportsSmart", FormMethod.Post))
 {
     <input type="hidden" name="html" />
-    <input type="submit" id="pdf" onclick="ExportPdf('ReportLoadCash.pdf', 'TableExport','idhead');" value="" style="display:none" />
+    <input type="submit" id="pdf" onclick="ExportPdf('ReportTerminalList.pdf', 'TableExport','idhead');" value="" style="display:none" />
 
 }
 
