--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -83,7 +83,13 @@
                 </div>
             </div>
         </div>
-
+        <div class="panel-group" style="width: 100%;">
+            <div class="panel panel-default">
+                <div id="documents">
+                    @Html.Partial("Sections/Pictures", Model)
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="col-md-6">
@@ -91,10 +97,10 @@
             <div class="panel panel-default">
                 <div id="PartnerDetailButtons" class="panel-heading">
                     <h3 class="texth3">
-                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i>
+                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i>Contacts
                     </h3>
                     <div id="getContacts" class="panel-collapse collapse">
-                        <div class="loader"></div>
+                        
                     </div>
                 </div>
             </div>
@@ -104,11 +110,9 @@
             <div class="panel panel-default">
                 <div id="PartnerDetailButtons" class="panel-heading">
                     <h3 class="texth3">
-                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i>
+                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i>Vault Cash
                     </h3>
-                    <div id="getVaultcash" class="panel-collapse collapse">
-                        <div class="loader"></div>
-                    </div>
+                    <a href="~/Views/VaultCash/Index.cshtml">Valut Cash</a>
                 </div>
             </div>
         </div>
@@ -117,10 +121,10 @@
             <div class="panel panel-default">
                 <div id="PartnerDetailButtons" class="panel-heading">
                     <h3 class="texth3">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i>
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i>Surcharge
                     </h3>
                     <div id="getSurcharge" class="panel-collapse collapse">
-                        <div class="loader"></div>
+                        
                     </div>
                 </div>
             </div>
@@ -136,7 +140,6 @@
                             @Html.Partial("Sections/Interchanges", Model)
                         </h3>
                     </a>
-
                     <div id="" class="panel-collapse collapse">
                         <div class="loader"></div>
                     </div>
