--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -1,11 +1,8 @@
 ﻿@model OctagonPlatform.Models.Terminal
-
-@{
-    Layout = "~/Views/Shared/_LayoutEdits.cshtml";
-}
-
+    
+<div id="getContacts" class="panel-collapse collapse">
     <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
-                @Html.ActionLink(
+        @Html.ActionLink(
                 linkText: "Add Contact",
                 actionName: "Create",
                 controllerName: "TerminalContacts",
@@ -17,26 +14,26 @@
                 )
     </div>
 
-@*
-    <p class="alert alert-info">
-        <strong>@ViewBag.Error</strong>
-    </p>
-*@    
+    @*
+        <p class="alert alert-info">
+            <strong>@ViewBag.Error</strong>
+        </p>
+    *@
 
-<table id="contacts" class="table table-striped table-hover table-bordered">
-    <thead class="thead-blue">
-    <tr>
-        <th>Terminal</th>
-        <th>Name</th>
-        <th>Last Name</th>
-        <th>Phone</th>
-        <th>Email</th>
-        <th>Address</th>
+    <table id="contacts" class="table table-striped table-hover table-bordered">
+        <thead class="thead-blue">
+            <tr>
+                <th>Terminal</th>
+                <th>Name</th>
+                <th>Last Name</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Address</th>
 
-    </tr>
-    </thead>
-    <tbody id="listOfTerminalContacts">
-    @foreach (var item in Model.TerminalContacts)
+            </tr>
+        </thead>
+        <tbody id="listOfTerminalContacts">
+            @foreach (var item in Model.TerminalContacts)
     {
         if (!item.Deleted)
         {
@@ -47,54 +44,54 @@
                 <td>@item.Phone</td>
                 <td>@item.Email</td>
                 <td>@item.Address1</td>
-            @*  <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
-                                                    linkText: "Edit",
-                                                    actionName: "Edit",
-                                                    controllerName: "TerminalContacts",
-                                                    routeValues: new
-                                                    {
-                                                        id = item.Id
-                                                    },
-                                                    htmlAttributes: null
-                                                    )</td>
-    <td>
-        <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
-                                                     linkText: "Delete",
-                                                     actionName: "Delete",
-                                                     controllerName: "TerminalContacts",
-                                                     routeValues: new
-                                                     {
-                                                         id = item.Id,
-                                                         terminalId = Model.Id
-                                                     },
-                                                     htmlAttributes: null
-                                                     )
-    </td>
-    <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
-                                                        linkText: "Details",
-                                                        actionName: "Details",
-                                                        controllerName: "TerminalContacts",
-                                                        routeValues: new
-                                                        {
-                                                            id = item.Id
-                                                        },
-                                                        htmlAttributes: null
-                                                        )</td>
-            *@
+                @*  <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                    linkText: "Edit",
+                                                                    actionName: "Edit",
+                                                                    controllerName: "TerminalContacts",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = item.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )</td>
+                    <td>
+                        <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                     linkText: "Delete",
+                                                                     actionName: "Delete",
+                                                                     controllerName: "TerminalContacts",
+                                                                     routeValues: new
+                                                                     {
+                                                                         id = item.Id,
+                                                                         terminalId = Model.Id
+                                                                     },
+                                                                     htmlAttributes: null
+                                                                     )
+                    </td>
+                    <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                        linkText: "Details",
+                                                                        actionName: "Details",
+                                                                        controllerName: "TerminalContacts",
+                                                                        routeValues: new
+                                                                        {
+                                                                            id = item.Id
+                                                                        },
+                                                                        htmlAttributes: null
+                                                                        )</td>
+                *@
             </tr>
         }
     }
-</table>
-
+    </table>
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/search")
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
-   @* @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js") *@
+    @* @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js") *@
 
     <script>
         var jQuery_1_10_2 = $.noConflict(true);
 
-        jQuery_1_10_2(function() {
+        jQuery_1_10_2(function () {
             $("#contacts").DataTable();
         });
     </script>
